--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
        <div class="submit"><a href="#">Start your Application</a></div> 
        <div class="model"><img src="/model.png" alt="PixoModel"></div>
     </div>   
+    <footer>
+        <p>&copy; Pixonoids 2022</p>
+    </footer>
     
 </body>
 </html>
