--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
     
     <div>
         <h1 id="theme">Freshmen interviews 2K22</h1>
-        <p>Team Pixonoids cordially invites you to the Freshmen interviews which gives <br>
-            a fair chance to connect with people of akin vision And be a part of the<br> 
+        <p>Team Pixonoids cordially invites you to the Freshmen interviews which gives 
+            a fair chance to connect with people of akin vision And be a part of the
             team which is driven by creativity.</p>
    
        <div class="submit"><a href="#">Start your Application</a></div> 
        <div class="model"><img src="/model.png" alt="PixoModel"></div>
     </div>   
-    <footer>
-        <p>&copy; Pixonoids 2022</p>
-    </footer>
+    <footer>&copy; Pixonoids 2022</footer>
     
 </body>
 </html>
